Fix overflow not hidden on about gallery and fix about__content__media__image

--- a/styles/pages/about/content.scss
+++ b/styles/pages/about/content.scss
@@ -25,8 +25,11 @@
 }
 
 .about__content__media {
-  position: absolute;
+  position: relative;
 }
 
 .about__content__media__image {
+  @extend %cover;
+
+  object-fit: cover;
 }
